plugins {
  id 'java'
  id 'org.springframework.boot' version '3.2.4'
  id 'io.spring.dependency-management' version '1.1.0'
}

group = 'cc.tkmr'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

  runtimeOnly 'com.h2database:h2'
  runtimeOnly 'org.postgresql:postgresql'
  
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.jar {
  manifest {
    attributes["Main-Class"] = "cc.tkmr.Application"
  }
}

tasks.named('test') {
  useJUnitPlatform()
}
